# ataraxia

./: 4  ;:w  Cargo.toml  README.md  README.norg  test.ax
src/: lib.rs  main.rs
src/interpreter/: mod.rs
src/lexer/: mod.rs
src/model/: expression.rs  mod.rs  operator.rs
src/model/object/: boolean.rs  error.rs  float.rs  fraction.rs  function.rs  integer.rs  mod.rs  primitive.rs  range.rs  scope.rs  string.rs  table.rs  unbound.rs
src/model/reference/: mod.rs
src/parser/: mod.rs
src/test/: mod.rs  parse.rs
src/test/ax_src/: advanced_maths.ax  basic_construct_table.ax  basic_construct_table_kv.ax  basic_construct_table_kv_var.ax  basic_currying.ax  basic_field_access.ax  basic_fn.ax  basic_fn_full.ax  basic_function.ax  basic_if.ax  basic_if_else.ax  basic_integer_power.ax  basic_multiline.ax  basic_newline.ax  basic_table_kv.ax  basic_table_manipulation.ax  basic_table_str.ax  full_spec.ax  invalid_field_access.ax  test3.ax
